# code-review-graph

./: pyproject.toml
code_review_graph/: communities.py  main.py
code_review_graph/tools/: community_tools.py  docs.py
docs/: ARCHITECTURE-OVERVIEW.md  COMMANDS.md  FEATURES.md  FORK-DIFFERENCES.md  INDEX.md  LLM-OPTIMIZED-REFERENCE.md  TROUBLESHOOTING.md  USAGE.md
tests/: test_communities.py  test_docs_hardening.py  test_tools.py
